# kedro-mlops-tp

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  mlflow.yml
data/01_raw/: companies.csv.dvc  reviews_dev.csv.dvc  shuttles.xlsx.dvc
docs/source/: conf.py  index.rst
notebooks/: data_validation.py  experiment_tracking.py  online_predictions.py  reviews.py
src/kedro_mlops_tp/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/kedro_mlops_tp/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro_mlops_tp/pipelines/data_science/: nodes.py  pipeline.py
src/kedro_mlops_tp/pipelines/inference/: nodes.py  pipeline.py
src/kedro_mlops_tp/pipelines/reporting/: nodes.py  pipeline.py
src/kedro_mlops_tp/schemas/: __init__.py  model_input_table_schema.py
tests/pipelines/data_science/: test_pipeline.py
